gcc/testsuite/rust/rustc/ui/borrowck/borrowck-local-borrow-outlives-fn.rs
fn cplusplus_mode(x: isize) -> &'static isize {
    &x
// { dg-error ".E0515." "" { target *-*-* } .-1 }
}

fn main() {}

